--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ a{
 }
 </style>
 <body>
-    <head>
+    <header>
 <nav>
-    <h1>luxury-flight</h1>
+    <h1>Luxury-Flight</h1>
  <ul style="text-align:center;">
 <li > <a href="">Home</a> </li>
 <li> <a href="">Flights</a> </li>
 <li> <a href="">About Us</a> </li>
  </ul>
 </nav>
-    </head>
+    </header>
     <main>
             <h3>Our Vision & Mission</h3>
             <p>Luxury-Flight is a high class airport company. Our main goal is to exceed customers expectation by creating a caring environment & uploading high standards in saftey and security.</p>
@@ -35,9 +35,9 @@ a{
 <li>Asia
 <ol type="1">
     <li>China</li>
-    <li>the moldive Islands</li>
+    <li>Maldives</li>
     <li>Jordan</li>
-    <li>The United Arab Emirates</li>
+    <li>Istanbul</li>
 </ol>
 <li>Africa  
 <ol type="A">
@@ -50,8 +50,11 @@ a{
 </li>
 </ul>
     </main>
+    <script src="JavaScript/app.js"></script>
     <footer>
 <h4> <i> this website is made by yazan and victoria </i></h4>
+&copy;
     </footer>
+   
 </body>
 </html>
