--- a/index.html
+++ b/index.html
@@ -2,28 +2,20 @@
 <html >
 <head>
     <title>luxury-flight</title>
+    <link href="./CSS/style.css"  rel="stylesheet" >
 </head>
-<style>
-nav ul li {
-list-style-type: none;
-display: inline-block;
-padding-left:100px;
-margin-left: 20px;
-}
-a{
-    text-decoration: none;
-}
-</style>
+
 <body>
     <header>
-<nav>
-    <h1>Luxury-Flight</h1>
- <ul style="text-align:center;">
-<li > <a href="">Home</a> </li>
-<li> <a href="">Flights</a> </li>
-<li> <a href="">About Us</a> </li>
- </ul>
-</nav>
+        <h1>Luxury-Flight</h1>
+     <nav>
+      <ul >
+        <li > <a href="">Home</a> </li>
+        <li> <a href="">Flights</a> </li>
+        <li> <a href="">About Us</a> </li>
+      </ul>
+     </nav>
+     
     </header>
     <main>
             <h3>Our Vision & Mission</h3>
@@ -50,9 +42,9 @@ a{
 </li>
 </ul>
     </main>
-    <script src="JavaScript/app.js"></script>
+  <script src="JavaScript/app.js"></script>
     <footer>
-<h4> <i> this website is made by yazan and victoria </i></h4>
+        <h4> <i> this website is made by yazan and victoria </i></h4>
 &copy;
     </footer>
    
