--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </ul>
 </section>
     </main>
-  <!--<script src="JavaScript/app.js"></script>-->
+  <script src="JavaScript/app.js"></script>
   
   <footer>
       <section> 
